feat(product): 소나큐브 이슈 해결 (#107)